--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -8,8 +8,7 @@ html body {
     background-color: rgb(25, 146, 216);
 
 }
-ul{
-    display: flex;
+.estiloUl{
     text-decoration: none;
     font-size: medium;
     padding: 10+5px;
@@ -18,6 +17,16 @@ ul{
     justify-content: space-evenly;
     font-weight: 500+200;
 }
+ul{
+    display: flex;
+   @extend .estiloUl
+}
+@mixin Mixin ($margenIzq, $margenTop){
+    margin-left: $margenIzq;
+    margin-top: $margenTop;
+    
+}
+
 #divPadreGrid{
 display: grid;
 grid-template-columns: 40% 40% 20%;
@@ -29,11 +38,10 @@ grid-template-areas: "A1 A1 A3"
 
 }
 #gridDiv1{
+    @include Mixin(20px,40px );
     grid-area: A1; 
     font-size: large;
     font-weight: 400;
-    margin-left: 20px;
-    margin-top: 40px;
     overflow-y:hidden;  
     }
 #divImagen{
@@ -147,6 +155,7 @@ img{
     
    
 }
+
 #gradienteIndex{
 
     background-image: linear-gradient(rgb(22, 231, 231), rgb(64, 126, 64));
