--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -131,8 +131,7 @@ img {
     text-align: center;
     font-size: small;
     margin-top: 2%;
-    padding-top: 2%;
-    position: relative; } }
+    padding-top: 2%; } }
 
 #gradienteIndex {
   background-image: linear-gradient(#16e7e7, #407e40); }
